nodejs_deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: httpd-webapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: httpd-webapp
  template:
    metadata:
      labels:
        app: httpd-webapp
    spec:
      containers:
      - name: nodejs-webapp
        image: httpd
        resources:
          limits:
            cpu: 500m
          requests:
            cpu: 200m
