nodejs_service.yml
apiVersion: v1
kind: Service
metadata:
  name: httpd-webapp-service
spec:
  selector:
    app: httpd-webapp
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
