ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mynewingress
  annotations:
    kubernetes.io/ingress.class: "alb"
    alb.ingress.kubernetes.io/scheme: "internet-facing"
    alb.ingress.kubernetes.io/target-type: "ip"
spec:
  ingressClassName: alb
  rules:
  - host: ""
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: nodejs-webapp-service2
            port:
              number: 4623

      - path: /harinadh
        pathType: Prefix
        backend:
          service:
            name: httpd-webapp-service
            port:
              number: 80
